Refactor: Move event management to separate microservice